# clios

./: .gitignore  .swp  ARCHITECTURE.md  Cargo.toml  Complete_code.txt  Diario-anotacoes.md  GUIA_DEPURACAO.md  LICENSE  Planejamento.md  README.md  RELATORIO_TESTES_EXECUTADOS.md  history.txt  install.sh  log.txt  meu_plugin.rhai  test_shell.sh  teste.txt  teste_producao.md
config/: cliosrc
config/plugins/: dev_tools.rhai  git_helpers.rhai  utils.rhai
config/scripts/: backup.sh  cleanup.sh  gitstat.sh  sysinfo.sh
docs/: CHANGELOG.md  CLIOS_CAPABILITIES.md  RELATORIO_MELHORIAS.md
scripts/: interactive_test.sh  test_job_control.sh
src/: builtins.rs  completion.rs  config.rs  expansion.rs  history.txt  jobs.rs  lib.rs  main.rs  pipeline.rs  prompt.rs  rhai_integration.rs  shell.rs  tests.rs
