[package]
name = "clios-shell"
version = "1.0.0"
edition = "2024"
description = "A Hybrid Rust + Rhai System Shell for Embedded Linux & Power Users"
license = "MIT"
repository = "https://github.com/seu-usuario/clios-shell"
keywords = ["shell", "terminal", "cli", "rhai", "scripting"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.42" # Para pegar a hora (opcional, pro prompt)
colored = "3.0.0" # Para facilitar a pintura de strings
glob = "0.3.3"
inquire = "0.9.1"
nix = { version = "0.30.1", features = ["process", "signal", "term"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rhai = "1.23.6"
rustyline = { version = "17.0.2", features = ["derive"] }
serde = {version = "1.0.228", features = ["derive"]} # Permite transformar Struct em Arquivo
serde_json = "1.0.145"
shlex = "1.3.0"
toml = "0.9.8" # Lê arquivos TOML
which = "8.0.0"
